<resources>
    <string name="app_name">Food Pantry Support</string>
    <string name="title_activity_maps">Food Pantry Map</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_register_event"><u>Register Event</u></string>
    <string name="title_register_pantry"><u>Register Pantry</u></string>
    <string name="register_event_name">Event Name*</string>
    <string name="register_pantry_name">Pantry Name*</string>
    <string name="register_event_location">Address*</string>
    <string name="register_event_phone">Phone Number*</string>
    <string name="register_event_email">Email Address*</string>
    <string name="register_event_website">Website*</string>
    <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="title_register_type">Choose Type</string>
    <string name="event_string">Event</string>
    <string name="pantry_string">Pantry</string>
    <string name="opens_at_string">Opens:</string>
    <string name="closes_at_string">Closes:</string>
    <string name="date_string">Date:</string>
    <string name="days_open_string">Days Open:</string>
    <string name="submit_register_event">Create Event</string>
    <string name="submit_register_pantry">Create Pantry</string>

    <!--Days of week-->
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>

    <!-- MapActivity -->
    <string name="zipCodeAddress">Search with ZipCode or Address</string>
    <string name="adaptarAddress">Address: %1$s</string>
    <string name="adaptarPhone">Phone Number: %1$s</string>
    <string name="adaptarWebsite">Website: %1$s</string>
    <string name="adaptarTimeOpenClose">Time Open: %1$s</string>
    <string name="adaptarEventDate">Event Date: %1$s</string>
    <string name="search">Search</string>

    <!--Event Confirmation Strings-->
    <string name="title_activity_event_confirmation"><u>Registration Confirmed</u></string>
    <string name="confirmation_congratulations">Congratulations!</string>
    <string name="success_pantry">You have successfully created a pantry.</string>
    <string name="success_event">You have successfully created an event.</string>
    <string name="share_button_event">Share your event!</string>
    <string name="share_button_pantry">Share your pantry!</string>
    <string name="title_activity_registrations_list">RegistrationsListActivity</string>

    <!--Reg List Strings-->
    <string name="reg_list_title"><u>Your Registrations</u></string>

</resources>
