<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">


    <!--Title-->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/title_register_pantry"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Type -->

    <TextView
        android:id="@+id/register_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TitleLabel"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_register_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/register_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/register_type"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/is_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pantry_string" />

        <RadioButton
            android:id="@+id/is_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_string" />

    </RadioGroup>


    <!--Standard inputs-->

    <EditText
        android:id="@+id/name_event_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_type_group"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/register_pantry_name"
        android:inputType="textShortMessage" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/location_event_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_event_input"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/register_event_location"
        android:inputType="textShortMessage" >
    </EditText>

    <EditText
        android:id="@+id/phone_event_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/location_event_input"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:digits="0123456789+"
        android:hint="@string/register_event_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_event_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/phone_event_input"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/register_event_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/website_event_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/email_event_input"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/register_event_website"
        android:inputType="textEmailAddress" />


    <!--Time and date-->

    <LinearLayout
        android:id="@+id/opens_at_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/website_event_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp" >

        <TextView
            android:id="@+id/register_opens_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opens_at_string" />

        <TextView
            android:id="@+id/open_time_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_time_set_string" />

        <Button
            android:id="@+id/open_time_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/choose_time_string" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/closes_at_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opens_at_layout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp" >

        <TextView
            android:id="@+id/register_closes_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closes_at_string" />

        <TextView
            android:id="@+id/close_time_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no_time_set_string" />

        <Button
            android:id="@+id/close_time_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/choose_time_string" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/choice_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/closes_at_layout">

        <!--Event Specific Layout-->
        <LinearLayout
            android:id="@+id/event_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/register_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_string" />

            <TextView
                android:id="@+id/event_date_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/no_date_set_string" />

            <Button
                android:id="@+id/event_date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/choose_date_string" />

        </LinearLayout>


        <!--Pantry Specific Layout-->

        <RelativeLayout
            android:id="@+id/pantry_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_pantry_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_open_string"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:id="@+id/days_open_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_pantry_days"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <CheckBox android:id="@+id/checkbox_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />
                <CheckBox android:id="@+id/checkbox_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />
                <CheckBox android:id="@+id/checkbox_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />
                <CheckBox android:id="@+id/checkbox_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />
                <CheckBox android:id="@+id/checkbox_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />
                <CheckBox android:id="@+id/checkbox_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />
                <CheckBox android:id="@+id/checkbox_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit_register_pantry"
        android:layout_below="@id/choice_layout"/>

</RelativeLayout>